deploy-private-registry.yml
apiVersion: v1
kind: Namespace
metadata:
  name: privateregistry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: privateregistry-deploy
  namespace: privateregistry
  labels:
    app: registry
spec:
  selector:
    matchLabels:
      app: registry
  replicas: 1
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
          name: privateregistry
        volumeMounts:
        - name: data
          mountPath: /var/lib/registry
        - name: auth
          mountPath: /auth/
          readOnly: true
        - name: certs
          mountPath: /certs/
      volumes:
        - name: auth
          secret:
            secretName: privateregistry-auth
        - name: certs
          secret:
            secretName: privateregistry-certs
        - name: data
          persistentVolumeClaim:
            claimName: registry-data
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: privateregistry-svc
  namespace: privateregistry
spec:
  selector:
    app: registry
  type: NodePort # https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
  ports:
  - name: privateregistry
    protocol: TCP
    port: 443
    targetPort: 5000
    nodePort: 30007
